--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<h1>Projects</h1>
 		</section>
 		<nav id="links">
-			<a href="talk-to-me/">Talk To Me</a>
-            <a href="beatle-bf/">Your Beatle Boyfriend</a>
+			<a href="t2m.html">Talk To Me</a>
+            <a href="beatle-bf.html">Your Beatle Boyfriend</a>
             <a href="emma.html">This is Emma</a>
 		</nav>
 	</main>
