--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
 </head>
 <body>
 	<main id="content">
@@ -13,9 +13,9 @@
 			<h1>Projects</h1>
 		</section>
 		<nav id="links">
-			<a href="t2m.html">Talk To Me</a>
-            <a href="beatle-bf.html">Your Beatle Boyfriend</a>
-            <a href="emma.html">This is Emma</a>
+			<a href="talk-to-me/index.html">Talk To Me</a>
+            <a href="beatle-bf/index.html">Your Beatle Boyfriend</a>
+            <a href="emma.html/index.html">This is Emma</a>
 		</nav>
 	</main>
 </body>
