--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 		</section>
 		<nav id="links">
 			<a href="talk-to-me/index.html">Talk To Me</a>
+        </nav>
+        <nav id="links">
             <a href="beatle-bf/index.html">Your Beatle Boyfriend</a>
+        </nav>
+        <nav id="links">
             <a href="emma.html/index.html">This is Emma</a>
-		</nav>
+        </nav>
 	</main>
 </body>
 </html>
