--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 		<section>
 			<h1>Projects</h1>
 		</section>
-		<nav id="links">
-			<a href="talk-to-me/index.html">Talk To Me</a>
-        </nav>
-        <nav id="links">
-            <a href="beatle-bf/index.html">Your Beatle Boyfriend</a>
-        </nav>
-        <nav id="links">
-            <a href="emma.html/index.html">This is Emma</a>
-        </nav>
+
+        <ul>
+            <li><a href="talk-to-me/index.html">Talk To Me</a></li>
+            <li><a href="beatle-bf/index.html">Your Beatle Boyfriend</a></li>
+            <li><a href="emma.html/index.html">This is Emma</a></li>
+        </ul>
 	</main>
 </body>
 </html>
