--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 		<section>
 			<h1>Projects</h1>
 		</section>
-
-        <ul>
-            <li><a href="talk-to-me/index.html">Talk To Me</a></li>
-            <li><a href="beatle-bf/index.html">Your Beatle Boyfriend</a></li>
-            <li><a href="emma.html/index.html">This is Emma</a></li>
-        </ul>
+            <p><a href="talk-to-me/index.html">Talk To Me</a></p>
+            <p><a href="beatle-bf/index.html">Your Beatle Boyfriend</a></p>
+            <p><a href="emma.html/index.html">This is Emma</a></p>
 	</main>
 </body>
 </html>
