Revert "Update index.html"
This reverts commit d3e11536f9930424bc8a6e27d7f2c55f49f00d38.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 		<section>
 			<h1>Projects</h1>
 		</section>
-            <p><a href="talk-to-me/index.html">Talk To Me</a></p>
-            <p><a href="beatle-bf/index.html">Your Beatle Boyfriend</a></p>
-            <p><a href="emma.html/index.html">This is Emma</a></p>
+
+        <ul>
+            <li><a href="talk-to-me/index.html">Talk To Me</a></li>
+            <li><a href="beatle-bf/index.html">Your Beatle Boyfriend</a></li>
+            <li><a href="emma.html/index.html">This is Emma</a></li>
+        </ul>
 	</main>
 </body>
 </html>
